objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Created_Date__c</fullName>
        <label>Account Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Feedback__c</fullName>
        <label>Account Feedback</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <label>Queries</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queries_2__c</fullName>
        <label>queries-2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account_2</fullName>
        <active>true</active>
        <label>Account-2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_3</fullName>
        <active>true</active>
        <label>Account-3</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>